parsers/liquid.js
module.exports = (function() {
  "use strict";

  /*
   * Generated by PEG.js 0.9.0.
   *
   * http://pegjs.org/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  function peg$parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},
        parser  = this,

        peg$FAILED = {},

        peg$startRuleFunctions = { Document: peg$parseDocument },
        peg$startRuleFunction  = peg$parseDocument,

        peg$c0 = function(contents) {
                return {
                    kind: "Document",
                    contents: contents
                }
            },
        peg$c1 = /^[ ]/,
        peg$c2 = { type: "class", value: "[ ]", description: "[ ]" },
        peg$c3 = { type: "other", description: "a for-in block" },
        peg$c4 = "{%",
        peg$c5 = { type: "literal", value: "{%", description: "\"{%\"" },
        peg$c6 = "for",
        peg$c7 = { type: "literal", value: "for", description: "\"for\"" },
        peg$c8 = "in",
        peg$c9 = { type: "literal", value: "in", description: "\"in\"" },
        peg$c10 = "%}",
        peg$c11 = { type: "literal", value: "%}", description: "\"%}\"" },
        peg$c12 = "endfor",
        peg$c13 = { type: "literal", value: "endfor", description: "\"endfor\"" },
        peg$c14 = function(iter, data, inner) {
                return {
                    kind: "ForEach",
                    iterator: iter,
                    data: data,
                    body: inner
                }
            },
        peg$c15 = ":",
        peg$c16 = { type: "literal", value: ":", description: "\":\"" },
        peg$c17 = ",",
        peg$c18 = { type: "literal", value: ",", description: "\",\"" },
        peg$c19 = function(arg0, args) { return [arg0].concat(args.map(function(e){return e[2]})) },
        peg$c20 = { type: "other", description: "a filter" },
        peg$c21 = "|",
        peg$c22 = { type: "literal", value: "|", description: "\"|\"" },
        peg$c23 = function(name, args) {
                return {
                    kind: "Filter",
                    name: name,
                    arguments: args === null ? [] : args
                }
            },
        peg$c24 = { type: "other", description: "an interpolation" },
        peg$c25 = "{{",
        peg$c26 = { type: "literal", value: "{{", description: "\"{{\"" },
        peg$c27 = "}}",
        peg$c28 = { type: "literal", value: "}}", description: "\"}}\"" },
        peg$c29 = function(id, filters) {
                return {
                    kind: "Interpolation",
                    name: id,
                    arguments: [],
                    filters: filters.map(function(e){return e[0]})
                }
            },
        peg$c30 = { type: "other", description: "an if tag" },
        peg$c31 = "if",
        peg$c32 = { type: "literal", value: "if", description: "\"if\"" },
        peg$c33 = "endif",
        peg$c34 = { type: "literal", value: "endif", description: "\"endif\"" },
        peg$c35 = function(pred, inner, elsifs, elseCase) {
                return {
                    kind: "IfStatement",
                    predicate: pred,
                    thenCase: inner,
                    elifCases: elsifs,
                    elseCase: elseCase
                }
            },
        peg$c36 = { type: "other", description: "an elsif tag" },
        peg$c37 = "elsif",
        peg$c38 = { type: "literal", value: "elsif", description: "\"elsif\"" },
        peg$c39 = function(pred, inner) {
                return {
                    kind: "IfStatement",
                    predicate: pred,
                    thenCase: inner
                }
            },
        peg$c40 = { type: "other", description: "an else tag" },
        peg$c41 = "else",
        peg$c42 = { type: "literal", value: "else", description: "\"else\"" },
        peg$c43 = function(inner) { return inner },
        peg$c44 = { type: "other", description: "a raw block" },
        peg$c45 = "{% raw %}",
        peg$c46 = { type: "literal", value: "{% raw %}", description: "\"{% raw %}\"" },
        peg$c47 = "{%raw%}",
        peg$c48 = { type: "literal", value: "{%raw%}", description: "\"{%raw%}\"" },
        peg$c49 = "{% endraw %}",
        peg$c50 = { type: "literal", value: "{% endraw %}", description: "\"{% endraw %}\"" },
        peg$c51 = { type: "any", description: "any character" },
        peg$c52 = function(c) {return c},
        peg$c53 = function(c) {
                return {
                    kind: "Raw",
                    value: c.join("")
                }
            },
        peg$c54 = { type: "other", description: "an include statement" },
        peg$c55 = "include",
        peg$c56 = { type: "literal", value: "include", description: "\"include\"" },
        peg$c57 = function(file) {
                return {
                    kind: "Include",
                    file: file
                }
            },
        peg$c58 = { type: "other", description: "a capture block" },
        peg$c59 = "capture",
        peg$c60 = { type: "literal", value: "capture", description: "\"capture\"" },
        peg$c61 = "endcapture",
        peg$c62 = { type: "literal", value: "endcapture", description: "\"endcapture\"" },
        peg$c63 = function(id, val) {
                return {
                    kind: "MacroDefinition",
                    name: id,
                    params: [],
                    body: val
                }
            },
        peg$c64 = { type: "other", description: "an identifier" },
        peg$c65 = /^[a-zA-Z]/,
        peg$c66 = { type: "class", value: "[a-zA-Z]", description: "[a-zA-Z]" },
        peg$c67 = /^[a-zA-Z0-9_\-]/,
        peg$c68 = { type: "class", value: "[a-zA-Z0-9_-]", description: "[a-zA-Z0-9_-]" },
        peg$c69 = function(id) {
                return {
                    kind: "Identifier",
                    value: id[0].concat(id[1].join(""))
                }
            },
        peg$c70 = /^[a-zA-z]/,
        peg$c71 = { type: "class", value: "[a-zA-z]", description: "[a-zA-z]" },
        peg$c72 = function(ident, mods) {
                return {
                    kind: "Identifier",
                    value: ident[0].concat(ident[1].join("")),
                    modifiers: mods
                }
            },
        peg$c73 = ".",
        peg$c74 = { type: "literal", value: ".", description: "\".\"" },
        peg$c75 = function(mod) {
                return {
                    kind: "Modifier",
                    value: mod
                }
            },
        peg$c76 = "[",
        peg$c77 = { type: "literal", value: "[", description: "\"[\"" },
        peg$c78 = "]",
        peg$c79 = { type: "literal", value: "]", description: "\"]\"" },
        peg$c80 = "true",
        peg$c81 = { type: "literal", value: "true", description: "\"true\"" },
        peg$c82 = "false",
        peg$c83 = { type: "literal", value: "false", description: "\"false\"" },
        peg$c84 = function(val) {
                return {
                    kind: "Boolean",
                    value: val === "true"
                }
            },
        peg$c85 = /^[0-9]/,
        peg$c86 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c87 = function(d1, d2) {
                return {
                    kind: "Number",
                    value: parseFloat(d1.join("")+"."+d2.join(""))
                }
            },
        peg$c88 = function(digits) {
                return {
                    kind: "Number",
                    value: parseInt(digits.join(""))
                }
            },
        peg$c89 = { type: "other", description: "a comment" },
        peg$c90 = "{% comment %}",
        peg$c91 = { type: "literal", value: "{% comment %}", description: "\"{% comment %}\"" },
        peg$c92 = "{% endcomment %}",
        peg$c93 = { type: "literal", value: "{% endcomment %}", description: "\"{% endcomment %}\"" },
        peg$c94 = function(c) {
                return {
                    kind: "Comment",
                    value: c.join("")
                }
            },
        peg$c95 = "<script",
        peg$c96 = { type: "literal", value: "<script", description: "\"<script\"" },
        peg$c97 = ">",
        peg$c98 = { type: "literal", value: ">", description: "\">\"" },
        peg$c99 = "</script>",
        peg$c100 = { type: "literal", value: "</script>", description: "\"</script>\"" },
        peg$c101 = function(attrs, s) {return s},
        peg$c102 = function(attrs, s) {
                return {
                    kind: "Tag",
                    name: "script",
                    attributes: attrs.map(function(a) { return a[0] }),
                    inner: {
                        kind: "Raw",
                        value: s.join("")
                    }
                }
            },
        peg$c103 = "<style",
        peg$c104 = { type: "literal", value: "<style", description: "\"<style\"" },
        peg$c105 = "</style>",
        peg$c106 = { type: "literal", value: "</style>", description: "\"</style>\"" },
        peg$c107 = function(attrs, s) {
                return {
                    kind: "Tag",
                    name: "style",
                    attributes: attrs.map(function(a) { return a[0] }),
                    inner: {
                        kind: "Raw",
                        value: s.join("")
                    }
                }
            },
        peg$c108 = "<!doctype ",
        peg$c109 = { type: "literal", value: "<!DOCTYPE ", description: "\"<!DOCTYPE \"" },
        peg$c110 = /^[^>]/,
        peg$c111 = { type: "class", value: "[^\\>]", description: "[^\\>]" },
        peg$c112 = function(doctype) {
                return {
                    kind: "Doctype",
                    value: doctype.join("").trim()
                }
            },
        peg$c113 = "<",
        peg$c114 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c115 = "/>",
        peg$c116 = { type: "literal", value: "/>", description: "\"/>\"" },
        peg$c117 = function(tagName, attrs) {
                return {
                    kind: "Tag",
                    name: tagName,
                    attributes: attrs.map(function(a) { return a[0] }),
                    inner: []
                }
            },
        peg$c118 = { type: "other", description: "an HTML tag" },
        peg$c119 = function(openTag, inner, closeTag) {
                if (openTag.value !== closeTag.value) {
                    throw SyntaxError("Missing closing tag for element "+openTag.value);
                }
                return {
                    kind: "Tag",
                    name: openTag.value,
                    attributes: openTag.attributes,
                    inner: inner
                }
            },
        peg$c120 = function(tagName, attrs) {
                return {
                    kind: "String",
                    value: tagName,
                    attributes: attrs.map(function(a) { return a[0] })
                }
            },
        peg$c121 = "</",
        peg$c122 = { type: "literal", value: "</", description: "\"</\"" },
        peg$c123 = function(tagName) {
                return {
                    kind: "String",
                    value: tagName
                }
            },
        peg$c124 = /^[^ \t\n\r"'>\/=]/,
        peg$c125 = { type: "class", value: "[^ \\t\\n\\r\\\"\\'\\>\\/\\=]", description: "[^ \\t\\n\\r\\\"\\'\\>\\/\\=]" },
        peg$c126 = function(attrName) {
                return {
                    kind: "String",
                    value: attrName.join("")
                }
            },
        peg$c127 = /^[^ \t\n\r"'=<>`]/,
        peg$c128 = { type: "class", value: "[^ \\t\\n\\r\\\"\\'\\=\\<\\>\\`]", description: "[^ \\t\\n\\r\\\"\\'\\=\\<\\>\\`]" },
        peg$c129 = function(attrValue) {
                return {
                    kind: "String",
                    value: attrValue.join("")
                }
            },
        peg$c130 = "'",
        peg$c131 = { type: "literal", value: "'", description: "\"'\"" },
        peg$c132 = /^[^']/,
        peg$c133 = { type: "class", value: "[^\\']", description: "[^\\']" },
        peg$c134 = "\"",
        peg$c135 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c136 = /^[^"]/,
        peg$c137 = { type: "class", value: "[^\\\"]", description: "[^\\\"]" },
        peg$c138 = function(attrValue) {
                return {
                    kind: "String",
                    value: attrValue[1].join("")
                }
            },
        peg$c139 = function(attrName) {
                return {
                    kind: "Attribute",
                    name: attrName,
                    value: attrName
                }
            },
        peg$c140 = "=",
        peg$c141 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c142 = function(attrName, attrValue) {
                return {
                    kind: "Attribute",
                    name: attrName,
                    value: attrValue
                }
            },
        peg$c143 = /^[a-zA-Z0-9_\-:]/,
        peg$c144 = { type: "class", value: "[a-zA-Z0-9\\_\\-\\:]", description: "[a-zA-Z0-9\\_\\-\\:]" },
        peg$c145 = function(tagName) {
                return tagName.join("")
            },
        peg$c146 = { type: "other", description: "text" },
        peg$c147 = /^[^<>{]/,
        peg$c148 = { type: "class", value: "[^\\<\\>{]", description: "[^\\<\\>{]" },
        peg$c149 = function(text) {
                return {
                    kind: "String",
                    value: text.join("")
                }
            },
        peg$c150 = "<!--",
        peg$c151 = { type: "literal", value: "<!--", description: "\"<!--\"" },
        peg$c152 = "-->",
        peg$c153 = { type: "literal", value: "-->", description: "\"-->\"" },
        peg$c154 = function(c) {
                return {
                    kind: "CommentHTML",
                    value: c.join("")
                }
            },
        peg$c155 = { type: "other", description: "whitespace" },
        peg$c156 = /^[ \t\n\r]/,
        peg$c157 = { type: "class", value: "[ \\t\\n\\r]", description: "[ \\t\\n\\r]" },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1, seenCR: false }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function error(message) {
      throw peg$buildException(
        message,
        null,
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos],
          p, ch;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column,
          seenCR: details.seenCR
        };

        while (p < pos) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, found, location) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0100-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1000-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new peg$SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseDocument() {
      var s0, s1;

      s0 = peg$currPos;
      s1 = peg$parseContent();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c0(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parse_s() {
      var s0, s1;

      s0 = [];
      if (peg$c1.test(input.charAt(peg$currPos))) {
        s1 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c2); }
      }
      while (s1 !== peg$FAILED) {
        s0.push(s1);
        if (peg$c1.test(input.charAt(peg$currPos))) {
          s1 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c2); }
        }
      }

      return s0;
    }

    function peg$parseContent() {
      var s0, s1;

      s0 = [];
      s1 = peg$parseLiquidExpression();
      if (s1 === peg$FAILED) {
        s1 = peg$parseDoctype();
        if (s1 === peg$FAILED) {
          s1 = peg$parseComment();
          if (s1 === peg$FAILED) {
            s1 = peg$parseRawTag();
            if (s1 === peg$FAILED) {
              s1 = peg$parseTag();
              if (s1 === peg$FAILED) {
                s1 = peg$parseText();
              }
            }
          }
        }
      }
      while (s1 !== peg$FAILED) {
        s0.push(s1);
        s1 = peg$parseLiquidExpression();
        if (s1 === peg$FAILED) {
          s1 = peg$parseDoctype();
          if (s1 === peg$FAILED) {
            s1 = peg$parseComment();
            if (s1 === peg$FAILED) {
              s1 = peg$parseRawTag();
              if (s1 === peg$FAILED) {
                s1 = peg$parseTag();
                if (s1 === peg$FAILED) {
                  s1 = peg$parseText();
                }
              }
            }
          }
        }
      }

      return s0;
    }

    function peg$parseLiquidExpression() {
      var s0;

      s0 = peg$parseInclude();
      if (s0 === peg$FAILED) {
        s0 = peg$parseCapture();
        if (s0 === peg$FAILED) {
          s0 = peg$parseLiquidComment();
          if (s0 === peg$FAILED) {
            s0 = peg$parseRaw();
            if (s0 === peg$FAILED) {
              s0 = peg$parseIfTag();
              if (s0 === peg$FAILED) {
                s0 = peg$parseFor();
                if (s0 === peg$FAILED) {
                  s0 = peg$parseInterpolation();
                }
              }
            }
          }
        }
      }

      return s0;
    }

    function peg$parseFor() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15, s16, s17;

      peg$silentFails++;
      s0 = peg$currPos;
      if (input.substr(peg$currPos, 2) === peg$c4) {
        s1 = peg$c4;
        peg$currPos += 2;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c5); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_s();
        if (s2 !== peg$FAILED) {
          if (input.substr(peg$currPos, 3) === peg$c6) {
            s3 = peg$c6;
            peg$currPos += 3;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c7); }
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_s();
            if (s4 !== peg$FAILED) {
              s5 = peg$parseIdentifier();
              if (s5 !== peg$FAILED) {
                s6 = peg$parse_s();
                if (s6 !== peg$FAILED) {
                  if (input.substr(peg$currPos, 2) === peg$c8) {
                    s7 = peg$c8;
                    peg$currPos += 2;
                  } else {
                    s7 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c9); }
                  }
                  if (s7 !== peg$FAILED) {
                    s8 = peg$parse_s();
                    if (s8 !== peg$FAILED) {
                      s9 = peg$parseIdentifier();
                      if (s9 !== peg$FAILED) {
                        s10 = peg$parse_s();
                        if (s10 !== peg$FAILED) {
                          if (input.substr(peg$currPos, 2) === peg$c10) {
                            s11 = peg$c10;
                            peg$currPos += 2;
                          } else {
                            s11 = peg$FAILED;
                            if (peg$silentFails === 0) { peg$fail(peg$c11); }
                          }
                          if (s11 !== peg$FAILED) {
                            s12 = peg$parseContent();
                            if (s12 !== peg$FAILED) {
                              if (input.substr(peg$currPos, 2) === peg$c4) {
                                s13 = peg$c4;
                                peg$currPos += 2;
                              } else {
                                s13 = peg$FAILED;
                                if (peg$silentFails === 0) { peg$fail(peg$c5); }
                              }
                              if (s13 !== peg$FAILED) {
                                s14 = peg$parse_s();
                                if (s14 !== peg$FAILED) {
                                  if (input.substr(peg$currPos, 6) === peg$c12) {
                                    s15 = peg$c12;
                                    peg$currPos += 6;
                                  } else {
                                    s15 = peg$FAILED;
                                    if (peg$silentFails === 0) { peg$fail(peg$c13); }
                                  }
                                  if (s15 !== peg$FAILED) {
                                    s16 = peg$parse_s();
                                    if (s16 !== peg$FAILED) {
                                      if (input.substr(peg$currPos, 2) === peg$c10) {
                                        s17 = peg$c10;
                                        peg$currPos += 2;
                                      } else {
                                        s17 = peg$FAILED;
                                        if (peg$silentFails === 0) { peg$fail(peg$c11); }
                                      }
                                      if (s17 !== peg$FAILED) {
                                        peg$savedPos = s0;
                                        s1 = peg$c14(s5, s9, s12);
                                        s0 = s1;
                                      } else {
                                        peg$currPos = s0;
                                        s0 = peg$FAILED;
                                      }
                                    } else {
                                      peg$currPos = s0;
                                      s0 = peg$FAILED;
                                    }
                                  } else {
                                    peg$currPos = s0;
                                    s0 = peg$FAILED;
                                  }
                                } else {
                                  peg$currPos = s0;
                                  s0 = peg$FAILED;
                                }
                              } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                              }
                            } else {
                              peg$currPos = s0;
                              s0 = peg$FAILED;
                            }
                          } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c3); }
      }

      return s0;
    }

    function peg$parseFilterArgs() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8;
